# akk0rdsdk

./: .editorconfig  .gitignore  Readme.md  SDLUpdateCheckList.txt  clear.bat  install.bat  pull.bat  pull.sh  push.bat  push.sh
.github/workflows/: actions.yml
ci/proj.android/: AndroidManifest.xml  build.gradle  settings.gradle
ci/proj.android/app/: build.gradle  google-services.json
ci/proj.android/java/: CiTestActivity.java  MyBroadcastReceiver.java
ci/proj.android/main/: Android.mk
ci/proj.android/src/: main.cpp
docs/: Readme.md  _config.yml
examples/Example1/assets/: hello.txt
examples/Example1/proj.android/: AndroidManifest.xml  build.gradle  debug.bat  nm.bat  rdebug.bat
examples/Example1/proj.android_gradle_google/: AndroidManifest.xml  build.gradle  debug.bat  settings.gradle
examples/Example1/proj.codeblocks/: Example1.cbp  Example1.layout
examples/Example1/proj.ios/: Info.plist
examples/Example1/proj.win32/: Example1.sln  Example1.vcxproj  Example1.vcxproj.filters
examples/Example1/src/: main.cpp
examples/openGLES/proj.android/: build.gradle  debug.bat  settings.gradle
examples/openGLES/proj.win32/: opengles.sln  opengles.vcxproj
examples/openGLES/src/: main.cpp  recatngle.h  sdf.h  texture.h  triangle.h
examples/sdf/proj.android/: debug.bat  rdebug.bat
examples/sdf/proj.codeblocks/: sdf.cbp
examples/sdf/proj.ios/: Info.plist
examples/sdf/proj.win32/: sdf.sln  sdf.vcxproj  sdf.vcxproj.filters
examples/sdf/src/: main.cpp  openglesdriver.h  sdf.h  sdf_font.h  texture.h
examples/test/proj.android/: debug.bat  rebuild.bat
examples/test/proj.android_gradle_google/: AndroidManifest.xml  build.gradle  debug.bat  rebuild.bat
examples/test/proj.ios/: Info.plist
examples/test/proj.win32/: test.sln  test.vcxproj  test.vcxproj.filters
examples/test/src/: main.cpp
framework/: admob.cpp  admob.h  adrandomizer.cpp  adrandomizer.h  adsmanager.cpp  adsmanager.h  atlasmanager.cpp  atlasmanager.h  basewrapper.cpp  basewrapper.h  billing.cpp  billing.h  configmanager.cpp  configmanager.h  customevents.h  datasetmerger.h  framework_defines.h  matrix.h  openglesdriver.cpp  openglesdriver.h  sdf.cpp  sdf.h  sdffont.h  ttfwrapper.cpp  ttfwrapper.h  videodriver.cpp  videodriver.h
framework/ads/: adandroidjniprovider.h  adevent.h  adeventlistener.h  adformat.h  admanager.h  adprovider.h  adprovidercallback.h  adunitstatus.h
framework/ads/admob/: admobfactory.cpp  admobfactory.h  admobprovider.h  impladmobandroid.h  impladmobios.h  impladmobios.mm  impladmobwindows.h
framework/ads/vk/: vkadsfactory.h  vkadsprovider.h
framework/ads/yandex/: yandexadsfactory.cpp  yandexadsfactory.h  yandexadsprovider.h
framework/archive/: FileListManager.java  opengldriver.h
framework/billing/dummy/: BillingImplementation.kt
framework/billing/googleplay/: BillingImplementation.java
framework/billing/rustore/: BillingImplementation.kt
framework/core/: core_defines.h  locale.h  platforms.h
framework/core/android/: android_admob.h  android_billing.h  android_java_callbacks.h  android_wrapper.cpp  android_wrapper.h
framework/core/ios/: ios_admob.h  ios_admob.mm  ios_billing.h  ios_billing.mm  ios_wrapper.h  ios_wrapper.mm
framework/core/platformwrapper/: platforms.h
framework/core/videoadapter/: platform_ios.mm  platform_windows.cpp  video_dummy.h  video_interface.h  video_metal.h  video_opengl_win.h  video_opengles.h  videoadapter_android.cpp  videoadapter_ios.mm  videoadapter_opengl_win.h  videoadapter_opengles.h  videoadapter_windows.cpp
framework/core/windows/: windows_wrapper.cpp  (+1 more)
framework/gdpr/: gdpr_consentpolicymanager.h  gdpr_consentpolicyobserver.h
framework/gpg_manager/: gpg_manager.cpp  gpg_manager.h
libraries/: readme.md
libraries/SDL_gesture/: CMakeLists.txt  README.md  SDL_gesture.h
libraries/SDL_gesture/.github/workflows/: main.yml
libraries/SDL_gesture/cmake/: FindPrivateSDL2.cmake  FindSDL2main.cmake  SDL_gestureConfig.cmake.in  sdl-gesture.pc.in
libraries/SDL_gesture/test/: CMakeLists.txt  testgesture.c
libraries/libharu/: CMakeSettings.json
libraries/nanosvg/: nanosvg.h  nanosvgrast.h  readme.txt
tools/android/: gradle.config  libs.versions.toml
tools/githooks/: pre-commit
tools/ios/: getAppLastVersion.py  getProfile.py  getToken.py  setPodsVersions.sh
tools/pcreate/: main.cpp  pcreate.sln  pcreate.vcxproj
tools/runOnAndroid/: runOnAndroid.bat  runlogcat.bat
tools/xpath/: xpath.bat
ut/proj.android/: AndroidManifest.xml  build.gradle  debug.bat  local.properties  rebuild.bat
ut/proj.android_gradle_google/: AndroidManifest.xml  build.gradle  debug.bat  install.bat  local.properties  signbuild.bat  stack.bat
ut/proj.codeblocks/: ut.cbp
ut/proj.ios/: Info.plist
ut/proj.win32/: ut.sln  ut.vcxproj  ut.vcxproj.filters
ut/src/: main.cpp  testconfigmanager.h  testfs.h  ut_defines.h
utests/: CMakeLists.txt
utests/src/: test.cpp
utests/src/configmanager/: configmanager_test.h
utests/src/datasetmerger/: datasetmerger_test.h
(+230 files in other folders)
